objects/CMR_Requirement_Gathering__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Deployment_date__c</fullName>
        <label>Actual Deployment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Ready_for_UAT_date_from_CRM__c</fullName>
        <label>Actual Ready for UAT date from CRM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Release_Tag_date__c</fullName>
        <label>Actual Release Tag date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_UAT_Sign_off_received__c</fullName>
        <label>Actual UAT Sign-off received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Alternatives__c</fullName>
        <inlineHelpText>What other possible solutions were considered during the idea development?</inlineHelpText>
        <label>Alternatives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Reason__c</fullName>
        <label>Business Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMR_Status__c</fullName>
        <formula>TEXT( Change_Management_Request__r.Request_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM Release</label>
        <referenceTo>ResourceProject__c</referenceTo>
        <relationshipLabel>CMR Requirement Gatherings</relationshipLabel>
        <relationshipName>CMR_Requirement_Gatherings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Requirement_Cutoff_Date__c</fullName>
        <label>CRM Requirement Cutoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_SPOC_for_the_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM SPOC for the Request</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CMR_Requirement_Gatherings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Management_Request__c</fullName>
        <label>Change Management Request</label>
        <referenceTo>Governance_Request__c</referenceTo>
        <relationshipLabel>CMR Requirement Gatherings</relationshipLabel>
        <relationshipName>CMR_Requirement_Gatherings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Does_that_impact__c</fullName>
        <label>Does that impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Athena Mktg DW</fullName>
                </value>
                <value>
                    <fullName>Client Service Data Mart</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exception_approved_by__c</fullName>
        <label>Exception approved By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ed Benack</fullName>
                </value>
                <value>
                    <fullName>Vineet Puri</fullName>
                </value>
                <value>
                    <fullName>Kevin Maurer</fullName>
                </value>
                <value>
                    <fullName>Kirk Ziehm</fullName>
                </value>
                <value>
                    <fullName>Scott Castleman</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exception_approved_by_email__c</fullName>
        <label>Exception approved by email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exception_comment__c</fullName>
        <label>Exception comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Completion_Date__c</fullName>
        <label>Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feasibility_Done_date__c</fullName>
        <label>Feasibility Done date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feasibility_Done_to_be_done_by_TTI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feasibility Done(to be filled by TTI)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Location_on_the_Layout__c</fullName>
        <inlineHelpText>State specific location of the field (under/over an existing field or layout)</inlineHelpText>
        <label>Field Location on the Layout</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ideal_CRM_release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ideal CRM release</label>
        <referenceTo>ResourceProject__c</referenceTo>
        <relationshipLabel>CMR Requirement Gatherings (Actual Release)</relationshipLabel>
        <relationshipName>CMR_Requirement_Gatherings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ideal_CRM_release_date__c</fullName>
        <label>Ideal CRM release date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ideal_Deployment_date__c</fullName>
        <formula>CRM_Release__r.Deployment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ideal Deployment date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ideal_Ready_for_UAT_date_from_CRM__c</fullName>
        <label>Ideal Ready for UAT date from CRM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ideal_UAT_Signoff_date__c</fullName>
        <formula>CRM_Release__r.UAT_Sign_Off_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ideal UAT Signoff date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Names_of_UAT_testers__c</fullName>
        <inlineHelpText>Email addresses of the users conducting “User Acceptance Testing” 
List of 3 examples to refer to with their url link</inlineHelpText>
        <label>Names of UAT testers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Actual_Release_Tag_Date__c</fullName>
        <formula>Ideal_CRM_release__r.Deployment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Release Tag Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_CRM_Requirement_Cutoff_Date__c</fullName>
        <formula>CRM_Release__r.Requirements_Cut_Off_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM Requirement Cutoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Fields_to_be_Created__c</fullName>
        <inlineHelpText>Field name required, field type (lookup field, date field, text, picklist etc.)</inlineHelpText>
        <label>New Fields to be Created</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Ideal_CRM_release__c</fullName>
        <formula>CRM_Release__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ideal CRM release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ideal_CRM_release_date__c</fullName>
        <formula>CRM_Release__r.Deployment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ideal CRM release date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Ideal_Ready_for_UAT_date_from_CRM__c</fullName>
        <formula>CRM_Release__r.UAT_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ideal Ready for UAT date from CRM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Object_Record_Type__c</fullName>
        <inlineHelpText>Examples - New Events, New CrowdCompass. Put N/A if not applicable</inlineHelpText>
        <label>Object Record Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object_on_which_change_is_requested__c</fullName>
        <label>Object on which change is requested</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Manager_Email__c</fullName>
        <label>Owner's Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CMR_Requirement_Gatherings3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Who_should_have_access__c</fullName>
        <inlineHelpText>Provide the profile name or a user name (field required or optional)</inlineHelpText>
        <label>Profile Who should have access</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Solution__c</fullName>
        <label>Proposed Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Red_flag_raised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Red flag raised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Redflag_comments__c</fullName>
        <label>Redflag comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_deferred__c</fullName>
        <label>Release deferred</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Release_tag_date_changed__c</fullName>
        <label>Release tag date changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_tag_date_changed_reason__c</fullName>
        <label>Release tag date changed reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Execution Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_By_Manager_s_Email__c</fullName>
        <label>Requested By Manager's Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CMR_Requirement_Gatherings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Change__c</fullName>
        <label>Requested Change</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Requester_Department__c</fullName>
        <label>Requester Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client Services</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>PMO</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Operations</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requirement_Gathering_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link the TTI Requirement Gathering Form</inlineHelpText>
        <label>Requirement Gathering Form</label>
        <referenceTo>CMR_Requirement_Gathering__c</referenceTo>
        <relationshipLabel>CMR Requirement Gatherings</relationshipLabel>
        <relationshipName>CMR_Requirement_Gatherings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirement_discussion_meeting__c</fullName>
        <label>Requirement discussion meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requirement_freeze_by_requester_Date__c</fullName>
        <label>Requirement freeze( by requester) Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requirement_freeze_by_requester__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requirement freeze( by requester)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requirement_sent_to_CRM_team__c</fullName>
        <label>Requirement sent to CRM team</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Ops_SPOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Ops SPOC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CMR_Requirement_Gatherings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TTI_Requirement_Cutoff_Date__c</fullName>
        <label>TTI Requirement Cutoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UAT_communication_sent_to_the_requester__c</fullName>
        <label>UAT communication sent to the requester</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UAT_done_on_time__c</fullName>
        <formula>(Actual_UAT_Sign_off_received__c - Ideal_UAT_Signoff_date__c) &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UAT not done on time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_if_required__c</fullName>
        <inlineHelpText>State validation and criteria</inlineHelpText>
        <label>Validation if required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_kind_of_impact__c</fullName>
        <label>What kind of impact:</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Does_that_impact__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User Level</fullName>
                </value>
                <value>
                    <fullName>Object Level</fullName>
                </value>
                <value>
                    <fullName>Field Level</fullName>
                </value>
                <value>
                    <fullName>Data Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workflow_action_Email_trigger__c</fullName>
        <inlineHelpText>Provide the to &amp; from email address, Subject and body of the email</inlineHelpText>
        <label>Workflow action: Email trigger</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Workflow_action_Field_update__c</fullName>
        <inlineHelpText>Details of field/s to be updated based on workflow criteria (new value of the field)</inlineHelpText>
        <label>Workflow action: Field update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Workflow_action_Other__c</fullName>
        <inlineHelpText>Any additional workflow (example – creation of a follow up task, case etc.)</inlineHelpText>
        <label>Workflow action: Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Workflow_overview__c</fullName>
        <inlineHelpText>Details of actions required based on criteria - send email, updating field, creating tasks</inlineHelpText>
        <label>Workflow - overview</label>
        <type>TextArea</type>
    </fields>
    <label>CMR Requirement Gathering</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>CMR Requirement Gathering Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CMR Requirement Gatherings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <recordTypes>
        <fullName>CMR_Requirement_Gathering</fullName>
        <active>true</active>
        <label>CMR Requirement Gathering</label>
    </recordTypes>
    <validationRules>
        <fullName>Exception_Comments_added_by_Approver</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  Exception_approved_by_email__c &lt;&gt;   $User.Email  ,
ISCHANGED(Exception_comment__c))</errorConditionFormula>
        <errorDisplayField>Exception_comment__c</errorDisplayField>
        <errorMessage>Exception Comments needs to be added by the Exception Approver.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Execution_Approved_Section_to_be_filled</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(CMR_Status__c = '3C-Execution Approved'), 
OR(ISCHANGED(Requirement_sent_to_CRM_team__c),
ISCHANGED(CRM_SPOC_for_the_Request__c),
ISCHANGED(Support_Ops_SPOC__c),
ISCHANGED(Actual_Release_Tag_date__c),
ISCHANGED(Release_tag_date_changed__c),
ISCHANGED(Release_tag_date_changed_reason__c),
ISCHANGED(Actual_Ready_for_UAT_date_from_CRM__c),
ISCHANGED(UAT_communication_sent_to_the_requester__c),
ISCHANGED(Actual_UAT_Sign_off_received__c)
))</errorConditionFormula>
        <errorMessage>You are not allowed to make the updates before the status is "Execution Approved"</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Execution_Approved_form_to_be_filled</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED(Feasibility_Done_date__c),
 RecordTypeId ='0121h0000000Apx',
NOT(ISBLANK(Requirement_discussion_meeting__c)),
 $User.Id &lt;&gt;  Requirement_Gathering_Form__r.CreatedById )</errorConditionFormula>
        <errorMessage>The Feasibility done date will be updated by the user who gathered the requirement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Red_flag_comments_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Red_flag_raised__c , 
ISBLANK( Redflag_comments__c ))</errorConditionFormula>
        <errorMessage>Red Flag Comments is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Release_Deffered_Reason_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( UAT_done_on_time__c, 
ISBLANK( Release_deferred__c ))</errorConditionFormula>
        <errorMessage>UAT Timelines not met, please fill the appropriate release deferred reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Release_Tag_Changed_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISBLANK(Release_tag_date_changed__c)) ,
ISBLANK(Release_tag_date_changed_reason__c)
)</errorConditionFormula>
        <errorMessage>Please fill the Release tag date changed reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requirement_Freeze_checkbox_update</fullName>
        <active>true</active>
        <description>Requirement Freeze by requester checkbox can be changed by Creator, Anuj Abrol, Sushil and David</description>
        <errorConditionFormula>AND(ISCHANGED( Requirement_freeze_by_requester__c ),
 $User.Id &lt;&gt; "00500000007RwJC",
$User.Id &lt;&gt; "00500000006y5WD",
$User.Id &lt;&gt; "00500000007C9CM",
$User.Id &lt;&gt; CreatedById
)</errorConditionFormula>
        <errorDisplayField>Requirement_freeze_by_requester__c</errorDisplayField>
        <errorMessage>You are not authorized to update the checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requirement_discussion_meeting_update</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
 ISCHANGED(Requirement_discussion_meeting__c),
 $User.Id &lt;&gt; "00500000007RwJC",
 $User.Id &lt;&gt; "00500000007C9CM",
 $User.Id &lt;&gt;"00500000006y5WD"
)</errorConditionFormula>
        <errorDisplayField>Requirement_discussion_meeting__c</errorDisplayField>
        <errorMessage>You are not authorized to update the Requirement Discussion Meeting.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requirement_freeze_by_requester_update</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISCHANGED(Requirement_freeze_by_requester__c),
Requirement_freeze_by_requester__c,
 $User.Id &lt;&gt; CreatedById )</errorConditionFormula>
        <errorMessage>You are not authorized to update the Requirement Freeze checkbox.</errorMessage>
    </validationRules>
</CustomObject>